--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Recognition project's ignore list:
+*.idx1-ubyte
+*.idx3-ubyte
+*.cnn
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
